@@ -20,10 +20,23 @@ apply from: "$rootDir/gradle/javaProject.gradle"
 dependencies {
     implementation 'org.apache.commons:commons-lang3'
     implementation 'info.picocli:picocli'
-    implementation project(':ballerina-tool')
+    implementation project(':ballerina-cli')
     implementation project(':debug-adapter:debug-adapter-core')
     implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j'
     implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc'
 }
 
 description = 'Ballerina - Debug Adapter - Debug Adaptor CLI'
+
+ext.moduleName = 'ballerina.debug.adapter.cli'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+        ]
+        classpath = files()
+    }
+}
